libqt6c/src/libqtoolbar.hpp

typedef struct QAction QAction;
typedef struct QActionEvent QActionEvent;
typedef struct QEvent QEvent;
typedef struct QMetaObject QMetaObject;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QSize QSize;
typedef struct QStyleOptionToolBar QStyleOptionToolBar;
typedef struct QToolBar QToolBar;
typedef struct QWidget QWidget;
QToolBar* QToolBar_new(QWidget* parent);
QToolBar* QToolBar_new2(const libqt_string title);
QToolBar* QToolBar_new3();
QToolBar* QToolBar_new4(const libqt_string title, QWidget* parent);
QMetaObject* QToolBar_MetaObject(const QToolBar* self);
void QToolBar_SetMovable(QToolBar* self, bool movable);
bool QToolBar_IsMovable(const QToolBar* self);
void QToolBar_SetAllowedAreas(QToolBar* self, int areas);
int QToolBar_AllowedAreas(const QToolBar* self);
bool QToolBar_IsAreaAllowed(const QToolBar* self, int area);
void QToolBar_SetOrientation(QToolBar* self, int orientation);
int QToolBar_Orientation(const QToolBar* self);
void QToolBar_Clear(QToolBar* self);
QAction* QToolBar_AddSeparator(QToolBar* self);
QAction* QToolBar_InsertSeparator(QToolBar* self, QAction* before);
QAction* QToolBar_AddWidget(QToolBar* self, QWidget* widget);
QAction* QToolBar_InsertWidget(QToolBar* self, QAction* before, QWidget* widget);
QRect* QToolBar_ActionGeometry(const QToolBar* self, QAction* action);
QAction* QToolBar_ActionAt(const QToolBar* self, const QPoint* p);
QAction* QToolBar_ActionAt2(const QToolBar* self, int x, int y);
QAction* QToolBar_ToggleViewAction(const QToolBar* self);
QSize* QToolBar_IconSize(const QToolBar* self);
int QToolBar_ToolButtonStyle(const QToolBar* self);
QWidget* QToolBar_WidgetForAction(const QToolBar* self, QAction* action);
bool QToolBar_IsFloatable(const QToolBar* self);
void QToolBar_SetFloatable(QToolBar* self, bool floatable);
bool QToolBar_IsFloating(const QToolBar* self);
void QToolBar_SetIconSize(QToolBar* self, const QSize* iconSize);
void QToolBar_SetToolButtonStyle(QToolBar* self, int toolButtonStyle);
void QToolBar_ActionTriggered(QToolBar* self, QAction* action);
void QToolBar_MovableChanged(QToolBar* self, bool movable);
void QToolBar_AllowedAreasChanged(QToolBar* self, int allowedAreas);
void QToolBar_OrientationChanged(QToolBar* self, int orientation);
void QToolBar_IconSizeChanged(QToolBar* self, const QSize* iconSize);
void QToolBar_ToolButtonStyleChanged(QToolBar* self, int toolButtonStyle);
void QToolBar_TopLevelChanged(QToolBar* self, bool topLevel);
void QToolBar_VisibilityChanged(QToolBar* self, bool visible);
void QToolBar_ActionEvent(QToolBar* self, QActionEvent* event);
void QToolBar_ChangeEvent(QToolBar* self, QEvent* event);
void QToolBar_PaintEvent(QToolBar* self, QPaintEvent* event);
bool QToolBar_Event(QToolBar* self, QEvent* event);
void QToolBar_InitStyleOption(const QToolBar* self, QStyleOptionToolBar* option);
void QToolBar_Delete(QToolBar* self);